[package]
name = "alator"
version = "0.2.8"
authors = ["Calum Russell <calum.mj.russell@gmail.com>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "exchange"
path = "src/exchange/server.rs"

[dependencies]
itertools = "0.10.1"
time = { version = "0.3.17", features = ["macros", "parsing"] }
rand = "0.8.4"
rand_distr = "0.4.1"
log = "0.4.17" 
env_logger = "0.9.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
tonic = "0.9.2"

[dev-dependencies]
reqwest = { version = "0.11.11", features=["blocking"] }
zip = "0.6.2"
csv = "1.1.6"
criterion = "0.4.0"

[build-dependencies]
tonic-build = "0.9.2"

[lib]
bench = false

[[bench]]
name = "sim_benchmark"
harness = false
